# ideas

./: README.md  claude-oauth-paperclip-analysis-2026-03-17.md  engram-deepnote-ai-comparison-2026-02-24.md  engram-moonshine-stt-integration-2026-02-25.md  engram-screenpipe-comparison-2026-02-18.md  engram-swictation-comparison.md  engram-tada-tts-review-2026-03-11.md  engram-tts-kokoro-piper-integration-2026-03-11.md  engram-videodb-inspired-ideas-2026-03-03.md  package.json  videoagent-engram-analysis-2026-03-03.md
extension/: annual-review.docx  background.js  cgt-review.docx  content.js  isa-reminder.docx  manifest.json  rules.yaml  settings.css  settings.html  settings.js  sidepanel.css  sidepanel.html  sidepanel.js  templates-init.js
mock-io/: client-hartley.html  client-oldham.html  client-pemberton.html  client-thompson.html  index.html
ocr-provenance/: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .prettierignore  CONTRIBUTING.md  Dockerfile  LICENSE  OCR_PROVENANCE_COMPLETE_GUIDE.md  README.md  SECURITY.md  docker-compose.gpu.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  smithery.yaml  tsconfig.eslint.json  tsconfig.json  vitest.config.all.ts  vitest.config.ts
ocr-provenance/.github/: pull_request_template.md
ocr-provenance/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ocr-provenance/python/: __init__.py  clustering_worker.py  docx_image_extractor.py  embedding_worker.py  file_manager_worker.py  form_fill_worker.py  gpu_utils.py  image_extractor.py  image_optimizer.py  ocr_worker.py  pyproject.toml  requirements.txt  reranker_worker.py
ocr-provenance/scripts/: docker-healthcheck.sh
ocr-provenance/src/: bin-http.ts  bin-setup.ts  bin.ts  index.ts
ocr-provenance/tests/: global-teardown.ts
(+282 files in other folders)
