[project]
name = "ocr-provenance-workers"
version = "1.0.0"
description = "Python workers for OCR Provenance MCP System"
requires-python = ">=3.10"

[tool.ruff]
# Exclude common non-source directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".mypy_cache",
    ".pytest_cache",
]

# Same as Black
line-length = 100
indent-width = 4

# Target Python 3.10+
target-version = "py310"

[tool.ruff.lint]
# Enable rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "S101",   # Use of assert (OK in tests)
    "S603",   # subprocess without shell=True check (we validate inputs)
    "S607",   # Starting subprocess with partial path
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Unix-style line endings
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
# Tests can use assert and magic values
"**/test_*.py" = ["S101", "PLR2004"]
"**/*_test.py" = ["S101", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["ocr_provenance"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
